Use vi mode keys in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,3 +3,6 @@ set-option -g prefix C-a
 
 # Use double prefix to pass through prefix keys
 bind-key C-a send-prefix
+
+# Use vi keys for navigating the buffer in copy mode
+set-window-option -g mode-keys vi
