Use aggressive-resize in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,3 +6,7 @@ bind-key C-a send-prefix
 
 # Use vi keys for navigating the buffer in copy mode
 set-window-option -g mode-keys vi
+
+# Use aggressive resize so two clients connecting to one session can view
+# different windows with different viewport sizes
+set-window-option -g aggressive-resize
