Ignore vim tempfiles with git
Use .cvsignore because utilities like rsync use it, too.

See https://github.com/tpope/vim-pathogen#faq

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,5 +6,7 @@
 	ll = log --oneline
 	st = status --short
 	vz = ! open . -a Tower
+[core]
+	excludesfile = ~/.cvsignore
 [include]
 	path = .gitconfig.local
